// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Component Title renders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1
        class="typography align-edit ellipsis"
      >
        PREFIX
      </h1>
      <span
        style="display: inline-flex; margin: auto; overflow: hidden;"
      >
        <span
          class="title-edit-hidden"
        >
          TITLE
        </span>
        <input
          autocomplete="off"
          class="title-edit"
          placeholder="PLACEHOLDED"
          style="display: flex; width: 0px; margin: auto;"
          type="text"
          value="TITLE"
        />
      </span>
      <div>
        <div
          class="tooltip bottom"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            TOOLTIP
          </div>
        </div>
      </div>
      <h1
        class="typography align-edit ellipsis"
      >
        - 
        ENTITYID
      </h1>
      <h1
        class="typography align-edit ellipsis"
      >
        SUFFIX
      </h1>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <h1
      class="typography align-edit ellipsis"
    >
      PREFIX
    </h1>
    <span
      style="display: inline-flex; margin: auto; overflow: hidden;"
    >
      <span
        class="title-edit-hidden"
      >
        TITLE
      </span>
      <input
        autocomplete="off"
        class="title-edit"
        placeholder="PLACEHOLDED"
        style="display: flex; width: 0px; margin: auto;"
        type="text"
        value="TITLE"
      />
    </span>
    <div>
      <div
        class="tooltip bottom"
        style="left: -99999px; top: -99999px; opacity: 0;"
      >
        <div
          class="tooltip-arrow"
        />
        <div
          class="tooltip-label"
        >
          TOOLTIP
        </div>
      </div>
    </div>
    <h1
      class="typography align-edit ellipsis"
    >
      - 
      ENTITYID
    </h1>
    <h1
      class="typography align-edit ellipsis"
    >
      SUFFIX
    </h1>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Title Component Title renders and blurs on enter 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        style="display: inline-flex; margin: auto; overflow: hidden;"
      >
        <span
          class="title-edit-hidden"
        >
          ABCDE
        </span>
        <input
          autocomplete="off"
          class="title-edit"
          data-testid="DATA-TEST-ID"
          style="display: flex; width: 0px; margin: auto;"
          type="text"
          value="ABCDE"
        />
      </span>
      <div>
        <div
          class="tooltip bottom"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Rename
          </div>
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <span
      style="display: inline-flex; margin: auto; overflow: hidden;"
    >
      <span
        class="title-edit-hidden"
      >
        ABCDE
      </span>
      <input
        autocomplete="off"
        class="title-edit"
        data-testid="DATA-TEST-ID"
        style="display: flex; width: 0px; margin: auto;"
        type="text"
        value="ABCDE"
      />
    </span>
    <div>
      <div
        class="tooltip bottom"
        style="left: -99999px; top: -99999px; opacity: 0;"
      >
        <div
          class="tooltip-arrow"
        />
        <div
          class="tooltip-label"
        >
          Rename
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Title Component Title renders and blurs on tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        style="display: inline-flex; margin: auto; overflow: hidden;"
      >
        <span
          class="title-edit-hidden"
        >
          ABCDE
        </span>
        <input
          autocomplete="off"
          class="title-edit"
          data-testid="DATA-TEST-ID"
          style="display: flex; width: 0px; margin: auto;"
          type="text"
          value="ABCDE"
        />
      </span>
      <div>
        <div
          class="tooltip bottom"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Rename
          </div>
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <span
      style="display: inline-flex; margin: auto; overflow: hidden;"
    >
      <span
        class="title-edit-hidden"
      >
        ABCDE
      </span>
      <input
        autocomplete="off"
        class="title-edit"
        data-testid="DATA-TEST-ID"
        style="display: flex; width: 0px; margin: auto;"
        type="text"
        value="ABCDE"
      />
    </span>
    <div>
      <div
        class="tooltip bottom"
        style="left: -99999px; top: -99999px; opacity: 0;"
      >
        <div
          class="tooltip-arrow"
        />
        <div
          class="tooltip-label"
        >
          Rename
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Title Component Title renders and handles changes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        style="display: inline-flex; margin: auto; overflow: hidden;"
      >
        <span
          class="title-edit-hidden"
        >
          ABCDE
        </span>
        <input
          autocomplete="off"
          class="title-edit"
          data-testid="DATA-TEST-ID"
          style="display: flex; width: 0px; margin: auto;"
          type="text"
          value="ABCDE"
        />
      </span>
      <div>
        <div
          class="tooltip bottom"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Rename
          </div>
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <span
      style="display: inline-flex; margin: auto; overflow: hidden;"
    >
      <span
        class="title-edit-hidden"
      >
        ABCDE
      </span>
      <input
        autocomplete="off"
        class="title-edit"
        data-testid="DATA-TEST-ID"
        style="display: flex; width: 0px; margin: auto;"
        type="text"
        value="ABCDE"
      />
    </span>
    <div>
      <div
        class="tooltip bottom"
        style="left: -99999px; top: -99999px; opacity: 0;"
      >
        <div
          class="tooltip-arrow"
        />
        <div
          class="tooltip-label"
        >
          Rename
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Title Component Title renders not editable 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="title-edit-hidden"
      >
        TITLE
      </span>
      <input
        autocomplete="off"
        class="title-edit"
        data-testid="DATA-TEST-ID"
        readonly=""
        style="display: flex; width: 0px; margin: auto;"
        type="text"
        value="TITLE"
      />
    </div>
  </body>,
  "container": <div>
    <span
      class="title-edit-hidden"
    >
      TITLE
    </span>
    <input
      autocomplete="off"
      class="title-edit"
      data-testid="DATA-TEST-ID"
      readonly=""
      style="display: flex; width: 0px; margin: auto;"
      type="text"
      value="TITLE"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Title Component Title renders restores title when too short 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        style="display: inline-flex; margin: auto; overflow: hidden;"
      >
        <span
          class="title-edit-hidden"
        >
          TITLE
        </span>
        <input
          autocomplete="off"
          class="title-edit"
          data-testid="DATA-TEST-ID"
          style="display: flex; width: 0px; margin: auto;"
          type="text"
          value="TITLE"
        />
      </span>
      <div>
        <div
          class="tooltip bottom"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Rename
          </div>
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <span
      style="display: inline-flex; margin: auto; overflow: hidden;"
    >
      <span
        class="title-edit-hidden"
      >
        TITLE
      </span>
      <input
        autocomplete="off"
        class="title-edit"
        data-testid="DATA-TEST-ID"
        style="display: flex; width: 0px; margin: auto;"
        type="text"
        value="TITLE"
      />
    </span>
    <div>
      <div
        class="tooltip bottom"
        style="left: -99999px; top: -99999px; opacity: 0;"
      >
        <div
          class="tooltip-arrow"
        />
        <div
          class="tooltip-label"
        >
          Rename
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
